--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="orange">#FFF6921E</color>
     <color name="red">#FFFF0000</color>
     <color name="gray">#7C000000</color>
+    <color name="beige">#FFF4E9DD</color>
     <color name="inputColor">#FFF4E9DD</color>
     <color name="login_background_color">#FFF4E9DD</color>
     <color name="colorAccent">#F6921E</color>
