--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -69,7 +69,7 @@
 
 
     <ScrollView
-        android:id="@+id/scrollView"
+        android:id="@+id/reviewScrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
