fragment_review_tag 페이지 id 명 수정

--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -611,7 +611,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tagLayout">
 
                 <Button
-                    android:id="@+id/request_button"
+                    android:id="@+id/comment_button"
                     android:layout_width="wrap_content"
                     android:layout_height="45dp"
                     android:layout_marginStart="80dp"
