--- a/app/src/main/res/layout/fragment_cafe_modify.xml
+++ b/app/src/main/res/layout/fragment_cafe_modify.xml
@@ -415,8 +415,8 @@
                     android:layout_marginBottom="20dp"
                     android:letterSpacing="-0.02"
                     android:lineSpacingMultiplier="1.2"
-                    android:text="상호명: 위메카 We Make Cafe\n대표자: 임현승, 서현준, 송상화, 이재윤, 전현구\n이메일: suwonUni@gmail.com\n카카오톡: @위메카 친구 추가하고 소식을 받아보세요"
-                    android:textColor="#ff191919"
+                    android:text="상호명: 위메카 We Make Cafe\n개발자: 임현승, 서현준, 송상화, 이재윤, 전현구\n이메일: suwonUni@gmail.com\n카카오톡: @위메카 친구 추가하고 소식을 받아보세요"
+                    android:textColor="@color/black"
                     android:textSize="8dp" />
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
