--- a/app/src/main/res/layout/fragment_mypage_modify.xml
+++ b/app/src/main/res/layout/fragment_mypage_modify.xml
@@ -329,13 +329,44 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="20dp"
                 android:background="@drawable/edge_square_brown"
                 android:text="수정완료"
                 android:textColor="#FFFFFF"
                 android:textSize="30sp"
                 android:textStyle="bold" />
 
+            <LinearLayout
+                android:id="@+id/mypageModify_footer"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:orientation="horizontal"
+                android:padding="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/modify_button_deleteLayout">
+
+                <ImageView
+                    android:id="@+id/mypageModify_footerLogo"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="20dp"
+                    android:src="@drawable/logo" />
+
+                <TextView
+                    android:id="@+id/mypageModify_footerTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="42dp"
+                    android:layout_marginBottom="20dp"
+                    android:letterSpacing="-0.02"
+                    android:lineSpacingMultiplier="1.2"
+                    android:text="상호명: 위메카 We Make Cafe\n개발자: 임현승, 서현준, 송상화, 이재윤, 전현구\n이메일: suwonUni@gmail.com\n카카오톡: @위메카 친구 추가하고 소식을 받아보세요"
+                    android:textColor="@color/black"
+                    android:textSize="8dp" />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
