--- a/app/src/main/res/layout/fragment_review_tag.xml
+++ b/app/src/main/res/layout/fragment_review_tag.xml
@@ -526,17 +526,18 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <LinearLayout
-                android:id="@+id/modifyPage_footer"
+                android:id="@+id/reviewTag_footer"
                 android:layout_width="match_parent"
-                android:layout_height="230dp"
+                android:layout_height="200dp"
                 android:orientation="horizontal"
                 android:padding="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/constraintLayout26">
+                app:layout_constraintTop_toBottomOf="@id/constraintLayout26">
 
                 <ImageView
+                    android:id="@+id/reviewTag_footerLogo"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_marginTop="30dp"
@@ -544,6 +545,7 @@
                     android:src="@drawable/logo" />
 
                 <TextView
+                    android:id="@+id/reviewTag_footerTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
@@ -552,7 +554,7 @@
                     android:letterSpacing="-0.02"
                     android:lineSpacingMultiplier="1.2"
                     android:text="상호명: 위메카 We Make Cafe\n개발자: 임현승, 서현준, 송상화, 이재윤, 전현구\n이메일: suwonUni@gmail.com\n카카오톡: @위메카 친구 추가하고 소식을 받아보세요"
-                    android:textColor="#ff191919"
+                    android:textColor="@color/black"
                     android:textSize="8dp" />
             </LinearLayout>
 
