--- a/app/src/main/res/layout/item_more_review.xml
+++ b/app/src/main/res/layout/item_more_review.xml
@@ -90,7 +90,7 @@
             <TextView
                 android:id="@+id/review_comment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="10dp"
                 android:text="리뷰 내용" />
 
